--- a/server/src/templates/auth/register.html
+++ b/server/src/templates/auth/register.html
@@ -12,8 +12,8 @@
     <label for="firstname">First name</label>
     <input name="firstname" id="firstname" required>
 
-    <label for="real_lastname">Last name</label>
-    <input name="real_lastname" id="real_lastname" required>
+    <label for="lastname">Last name</label>
+    <input name="lastname" id="lastname" required>
 
     <label for="is_refugee">Do you have refugee status?</label>
     <label>
