--- a/server/src/templates/forum/feed.html
+++ b/server/src/templates/forum/feed.html
@@ -13,7 +13,11 @@
       <header>
         <div>
           <h1>{{ post['title'] }}</h1>
+          {% if post['is_resident'] == 0 %}
+          <div class="about">by {{ post['username'] }} [Refugee]' on {{ post['created'].strftime('%Y-%m-%d') }}</div>
+          {% else %}
           <div class="about">by {{ post['username'] }} on {{ post['created'].strftime('%Y-%m-%d') }}</div>
+          {% endif %}
         </div>
         {% if g.user['id'] == post['author_id'] %}
           <a class="action" href="{{ url_for('forum.update', id=post['id']) }}">Edit</a>
