--- a/server/src/templates/local_events/local_events.html
+++ b/server/src/templates/local_events/local_events.html
@@ -5,10 +5,10 @@
     <meta name="keywords" content="Join Us">
     <meta name="description" content="">
     <title>Host Event</title>
-    <link rel="stylesheet" href="nicepage.css" media="screen">
-<link rel="stylesheet" href="Host-Event.css" media="screen">
-    <script class="u-script" type="text/javascript" src="jquery.js" "="" defer=""></script>
-    <script class="u-script" type="text/javascript" src="nicepage.js" "="" defer=""></script>
+    <link rel="stylesheet" href="/static/nicepage.css" media="screen">
+<link rel="stylesheet" href="/static/local_events.css" media="screen">
+    <script class="u-script" type="text/javascript" src="/static/jquery.js" "="" defer=""></script>
+    <script class="u-script" type="text/javascript" src="/static/nicepage.js" "="" defer=""></script>
     <meta name="generator" content="Nicepage 4.17.10, nicepage.com">
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
     <link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
