--- a/server/src/templates/local_courses/local_courses.html
+++ b/server/src/templates/local_courses/local_courses.html
@@ -5,10 +5,10 @@
     <meta name="keywords" content="Join Us">
     <meta name="description" content="">
     <title>Teach course</title>
-    <link rel="stylesheet" href="nicepage.css" media="screen">
-<link rel="stylesheet" href="Teach-course.css" media="screen">
-    <script class="u-script" type="text/javascript" src="jquery.js" "="" defer=""></script>
-    <script class="u-script" type="text/javascript" src="nicepage.js" "="" defer=""></script>
+    <link rel="stylesheet" href="/static/nicepage.css" media="screen">
+<link rel="stylesheet" href="/static/local_courses.css" media="screen">
+    <script class="u-script" type="text/javascript" src="/static/jquery.js" "="" defer=""></script>
+    <script class="u-script" type="text/javascript" src="/static/nicepage.js" "="" defer=""></script>
     <meta name="generator" content="Nicepage 4.17.10, nicepage.com">
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
     <link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
@@ -19,7 +19,7 @@
 		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": "",
-		"logo": "images/IntegrApp1.png"
+		"logo": "/static/images/IntegrApp1.png"
 }</script>
     <meta name="theme-color" content="#476160">
     <meta property="og:title" content="Teach course">
@@ -27,7 +27,7 @@
   </head>
   <body class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-header" id="sec-a7b1"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="500" data-image-height="500">
-          <img src="images/IntegrApp1.png" class="u-logo-image u-logo-image-1">
+          <img src="/static/images/IntegrApp1.png" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1" data-responsive-from="XL">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;" wfd-invisible="true">
@@ -151,19 +151,19 @@
           <div class="u-layout">
             <div class="u-layout-row">
               <div class="u-container-style u-layout-cell u-size-15-lg u-size-15-sm u-size-15-xl u-size-15-xs u-size-30-md u-layout-cell-1">
-                <div class="u-container-layout u-container-layout-1"><span class="u-file-icon u-icon u-icon-1"><img src="images/3144456.png" alt=""></span>
+                <div class="u-container-layout u-container-layout-1"><span class="u-file-icon u-icon u-icon-1"><img src="/static/images/3144456.png" alt=""></span>
                 </div>
               </div>
               <div class="u-container-style u-layout-cell u-size-15-lg u-size-15-sm u-size-15-xl u-size-15-xs u-size-30-md u-layout-cell-2">
-                <div class="u-container-layout u-container-layout-2"><span class="u-file-icon u-icon u-icon-2"><img src="images/991922.png" alt=""></span>
+                <div class="u-container-layout u-container-layout-2"><span class="u-file-icon u-icon u-icon-2"><img src="/static/images/991922.png" alt=""></span>
                 </div>
               </div>
               <div class="u-container-style u-layout-cell u-size-15-lg u-size-15-sm u-size-15-xl u-size-15-xs u-size-30-md u-layout-cell-3">
-                <div class="u-container-layout u-container-layout-3"><span class="u-file-icon u-icon u-icon-3"><img src="images/839888.png" alt=""></span>
+                <div class="u-container-layout u-container-layout-3"><span class="u-file-icon u-icon u-icon-3"><img src="/static/images/839888.png" alt=""></span>
                 </div>
               </div>
               <div class="u-container-style u-layout-cell u-size-15-lg u-size-15-sm u-size-15-xl u-size-15-xs u-size-30-md u-layout-cell-4">
-                <div class="u-container-layout u-container-layout-4"><span class="u-file-icon u-icon u-icon-4"><img src="images/2704794.png" alt=""></span>
+                <div class="u-container-layout u-container-layout-4"><span class="u-file-icon u-icon u-icon-4"><img src="/static/images/2704794.png" alt=""></span>
                 </div>
               </div>
             </div>
