--- a/server/src/templates/auth/register.html
+++ b/server/src/templates/auth/register.html
@@ -16,14 +16,11 @@
     <input name="lastname" id="lastname" required>
 
     <label for="is_refugee">Do you have refugee status?</label>
-    <label>
-      <input type="radio" name="is_refugee">
-      Yes
-    </label>
-    <label>
-      <input type="radio" name="is_refugee">
-      No
-    </label>
+    <p>
+      <input type="radio" name="is_refugee" id="option1" value="yes"> Yes </input><br>
+      <input type="radio" name="is_refugee" id="option2" value="no"> No </input><br>
+    </p>
+    
 
     <label for="password">Password</label>
     <input type="password" name="password" id="password" required>
