--- a/server/src/templates/local_courses/local_courses.html
+++ b/server/src/templates/local_courses/local_courses.html
@@ -66,7 +66,8 @@
         <h2 class="u-text u-text-default u-text-1">Teach a Course</h2>
         <div class="u-container-style u-group u-radius-10 u-shape-round u-white u-group-1">
           <div class="u-container-layout u-valign-top-lg u-valign-top-md u-valign-top-sm u-valign-top-xl u-container-layout-1">
-            <a href="https://nicepage.com/website-design" class="u-border-2 u-border-black u-btn u-button-style u-hover-black u-none u-text-hover-white u-btn-1">upload your course poster here</a>
+            <p style="text-align:center;">upload your course poster here</p>
+            <input type="file" id="myFile" name="uploaded-file" accept=".jpg,.png,.jpeg" class="u-btn u-button-style u-hover-black u-none u-text-hover-white u-btn-1"></input>
           </div>
         </div>
         <div class="u-form u-form-1">
@@ -77,26 +78,26 @@
             </div>
             <div class="u-form-group u-form-partition-factor-2 u-form-radiobutton u-form-group-2">
               <div class="u-form-radio-button-wrapper">
-                <input type="radio" name="radiobutton-1" value="Relevant for Children">
+                <input type="checkbox" name="radiobutton-1" value="Relevant for Children">
                 <label class="u-label" for="radiobutton-1">Relevant for Children</label>
                 <br>
-                <input type="radio" name="radiobutton-1" value="Relevant for LMU">
+                <input type="checkbox" name="radiobutton-1" value="Relevant for LMU">
                 <label class="u-label" for="radiobutton-1">Relevant for LMU</label>
                 <br>
-                <input type="radio" name="radiobutton-1" value="Relevant for Chefs">
+                <input type="checkbox" name="radiobutton-1" value="Relevant for Chefs">
                 <label class="u-label" for="radiobutton-1">Relevant for Chefs</label>
                 <br>
               </div>
             </div>
             <div class="u-form-group u-form-partition-factor-2 u-form-radiobutton u-form-group-3">
               <div class="u-form-radio-button-wrapper">
-                <input type="radio" name="radiobutton" value="Relevant for Students">
+                <input type="checkbox" name="radiobutton" value="Relevant for Students">
                 <label class="u-label" for="radiobutton">Relevant for Students</label>
                 <br>
-                <input type="radio" name="radiobutton" value="Relevant for TUM">
+                <input type="checkbox" name="radiobutton" value="Relevant for TUM">
                 <label class="u-label" for="radiobutton">Relevant for TUM</label>
                 <br>
-                <input type="radio" name="radiobutton" value="Relevant for Workers">
+                <input type="checkbox" name="radiobutton" value="Relevant for Workers">
                 <label class="u-label" for="radiobutton">Relevant for Workers</label>
                 <br>
               </div>
@@ -171,21 +172,4 @@
         </div>
       </div>
     </section>
-    
-    
-    <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-6c1d"><div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1">Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
-      </div></footer>
-    <section class="u-backlink u-clearfix u-grey-80">
-      <a class="u-link" href="https://nicepage.com/website-design" target="_blank">
-        <span>Website Design</span>
-      </a>
-      <p class="u-text">
-        <span>created with</span>
-      </p>
-      <a class="u-link" href="https://nicepage.review" target="_blank">
-        <span>Website Builder</span>
-      </a>. 
-    </section>
-  
 </body></html>
