--- a/server/src/templates/local_events/local_events.html
+++ b/server/src/templates/local_events/local_events.html
@@ -27,7 +27,7 @@
   </head>
   <body class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-header" id="sec-a7b1"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="500" data-image-height="500">
-          <img src="static/image/IntegrApp1.png" class="u-logo-image u-logo-image-1">
+          <img src="/static/images/IntegrApp1.png" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1" data-responsive-from="XL">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;" wfd-invisible="true">
@@ -113,7 +113,7 @@
               <a href="#" class="u-btn u-btn-submit u-button-style">Submit</a>
               <input type="submit" value="submit" class="u-form-control-hidden">
             </div>
-            <div class="u-form-send-message u-form-send-success"> Thank you! Your message has been sent. </div>
+            <div class="u-form-send-message u-form-send-success"> Thank you! We will review your event and get in touch via email. </div>
             <div class="u-form-send-error u-form-send-message"> Unable to send your message. Please fix errors then try again. </div>
             <input type="hidden" value="" name="recaptchaResponse">
             <input type="hidden" name="formServices" value="33f0091583ad091e864def23c20092af">
@@ -127,19 +127,19 @@
           <div class="u-layout">
             <div class="u-layout-row">
               <div class="u-container-style u-layout-cell u-size-15-lg u-size-15-sm u-size-15-xl u-size-15-xs u-size-30-md u-layout-cell-1">
-                <div class="u-container-layout u-container-layout-1"><span class="u-file-icon u-icon u-icon-1"><img src="static/images/3144456.png" alt=""></span>
+                <div class="u-container-layout u-container-layout-1"><span class="u-file-icon u-icon u-icon-1"><img src="/static/images/3144456.png" alt=""></span>
                 </div>
               </div>
               <div class="u-container-style u-layout-cell u-size-15-lg u-size-15-sm u-size-15-xl u-size-15-xs u-size-30-md u-layout-cell-2">
-                <div class="u-container-layout u-container-layout-2"><span class="u-file-icon u-icon u-icon-2"><img src="static/images/991922.png" alt=""></span>
+                <div class="u-container-layout u-container-layout-2"><span class="u-file-icon u-icon u-icon-2"><img src="/static/images/991922.png" alt=""></span>
                 </div>
               </div>
               <div class="u-container-style u-layout-cell u-size-15-lg u-size-15-sm u-size-15-xl u-size-15-xs u-size-30-md u-layout-cell-3">
-                <div class="u-container-layout u-container-layout-3"><span class="u-file-icon u-icon u-icon-3"><img src="static/images/839888.png" alt=""></span>
+                <div class="u-container-layout u-container-layout-3"><span class="u-file-icon u-icon u-icon-3"><img src="/static/images/839888.png" alt=""></span>
                 </div>
               </div>
               <div class="u-container-style u-layout-cell u-size-15-lg u-size-15-sm u-size-15-xl u-size-15-xs u-size-30-md u-layout-cell-4">
-                <div class="u-container-layout u-container-layout-4"><span class="u-file-icon u-icon u-icon-4"><img src="static/images/2704794.png" alt=""></span>
+                <div class="u-container-layout u-container-layout-4"><span class="u-file-icon u-icon u-icon-4"><img src="/static/images/2704794.png" alt=""></span>
                 </div>
               </div>
             </div>
@@ -147,21 +147,4 @@
         </div>
       </div>
     </section>
-    
-    
-    <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-6c1d"><div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1">Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
-      </div></footer>
-    <section class="u-backlink u-clearfix u-grey-80">
-      <a class="u-link" href="https://nicepage.com/one-page-template" target="_blank">
-        <span>One Page Template</span>
-      </a>
-      <p class="u-text">
-        <span>created with</span>
-      </p>
-      <a class="u-link" href="" target="_blank">
-        <span>Website Builder Software</span>
-      </a>. 
-    </section>
-  
 </body></html>
