--- a/server/src/templates/local_courses/local_courses.html
+++ b/server/src/templates/local_courses/local_courses.html
@@ -26,7 +26,7 @@
     <meta property="og:type" content="website">
   </head>
   <body class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-header" id="sec-a7b1"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="500" data-image-height="500">
+        <a href="/" class="u-image u-logo u-image-1" data-image-width="500" data-image-height="500">
           <img src="/static/images/IntegrApp1.png" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1" data-responsive-from="XL">
@@ -38,22 +38,18 @@
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Items-(get).html" style="padding: 10px 20px;">Items (get)</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Courses-(join).html" style="padding: 10px 20px;">Courses (join)</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Teach-course.html" style="padding: 10px 20px;">Teach course</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Host-Event.html" style="padding: 10px 20px;">Host Event</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Events-(join).html" style="padding: 10px 20px;">Events (join)</a>
+            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="/items" style="padding: 10px 20px;">Items</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="/courses" style="padding: 10px 20px;">Courses</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="/events" style="padding: 10px 20px;">Events</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse" wfd-invisible="true">
             <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
-                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Items-(get).html">Items (get)</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Courses-(join).html">Courses (join)</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Teach-course.html">Teach course</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Host-Event.html">Host Event</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Events-(join).html">Events (join)</a>
+                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="/items" style="padding: 10px 20px;">Items</a>
+                </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="/courses" style="padding: 10px 20px;">Courses</a>
+                </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="/events" style="padding: 10px 20px;">Events</a>
 </li></ul>
               </div>
             </div>
