--- a/Nico/nicepage.css
+++ b/Nico/nicepage.css
@@ -38626,7 +38626,6 @@ a.u-link.u-text-hover-grey-90:hover {
 .u-header .u-nav-1 {
   font-weight: 700;
   font-size: 1rem;
-  letter-spacing: normal;
 }
 
 .u-header .u-nav-2 {
@@ -38653,6 +38652,10 @@ a.u-link.u-text-hover-grey-90:hover {
     margin-top: -50px;
     margin-bottom: 34px;
   }
+
+  .u-header .u-nav-1 {
+    letter-spacing: normal;
+  }
 }
 
 @media (max-width: 767px) {
@@ -38667,12 +38670,12 @@ a.u-link.u-text-hover-grey-90:hover {
 
   .u-header .u-image-1 {
     width: 66px;
-    margin-top: 7px;
+    margin-top: 0;
     margin-left: 0;
   }
 
   .u-header .u-menu-1 {
-    margin-top: -56px;
+    margin-top: -49px;
     margin-bottom: 31px;
   }
 }
