--- a/server/src/templates/local_events/local_events.html
+++ b/server/src/templates/local_events/local_events.html
@@ -62,7 +62,8 @@
         <h2 class="u-text u-text-default u-text-1">Host an Event</h2>
         <div class="u-container-style u-group u-radius-10 u-shape-round u-white u-group-1">
           <div class="u-container-layout u-valign-top-lg u-valign-top-md u-valign-top-sm u-valign-top-xl u-container-layout-1">
-            <a href="https://nicepage.com/website-design" class="u-border-2 u-border-black u-btn u-button-style u-hover-black u-none u-text-hover-white u-btn-1">upload your event poster here</a>
+            <p style="text-align:center;">upload your course poster here</p>
+            <input type="file" id="myFile" name="uploaded-file" accept=".jpg,.png,.jpeg" class="u-btn u-button-style u-hover-black u-none u-text-hover-white u-btn-1"></input>
           </div>
         </div>
         <div class="u-form u-form-1">
