--- a/server/src/templates/homepage/Homepage.html
+++ b/server/src/templates/homepage/Homepage.html
@@ -86,8 +86,8 @@ C6.9,115.6,25.2,125.2,43.2,126.9z"></path></svg>
 <section class="u-clearfix u-palette-3-base u-section-2" id="carousel_0a6f">
   <div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
     <h4 class="u-text u-text-body-color u-text-1">Be a part of IntegrApp now</h4>
-    <a href="https://nicepage.cc" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-1">REGISTER</a>
-    <a href="https://nicepage.cc" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-2">log in</a>
+    <a href="/auth/register" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-1">REGISTER</a>
+    <a href="/auth/login" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-2">log in</a>
   </div>
 </section>
 <section class="u-align-left-md u-align-left-sm u-align-left-xs u-clearfix u-palette-3-dark-3 u-section-3" id="sec-2685">
