--- a/server/src/templates/refugee_items/refugee_items.html
+++ b/server/src/templates/refugee_items/refugee_items.html
@@ -27,7 +27,7 @@
   </head>
   <body class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-header" id="sec-a7b1"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <a href="/" class="u-image u-logo u-image-1" data-image-width="500" data-image-height="500">
-          <img src="images/IntegrApp1.png" class="u-logo-image u-logo-image-1">
+          <img src="/static/images/IntegrApp1.png" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1" data-responsive-from="XL">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;" wfd-invisible="true">
@@ -64,7 +64,7 @@
             <div class="u-container-style u-list-item u-radius-15 u-repeater-item u-shape-round u-video-cover u-white u-list-item-1">
               <div class="u-container-layout u-similar-container u-valign-top-xl u-container-layout-1">
                 <h4 class="u-align-center u-text u-text-palette-1-dark-2 u-text-1">t-shirts</h4>
-                <img class="u-image u-image-contain u-image-round u-preserve-proportions u-radius-10 u-image-1" src="images/54335e5c4d98fafafb5a6e4cd7297058e85bbef5d328b4f8e62ab31a7c3e40aab42b5d2049e5f48791830697f9f42d33255a479722854252a05e61_1280.png" alt="" data-image-width="1063" data-image-height="1280"><span class="u-icon u-icon-1"><svg class="u-svg-content" viewBox="0 0 50 50" x="0px" y="0px" style="width: 1em; height: 1em;"><path style="fill:currentColor;" d="M24.85,10.126c2.018-4.783,6.628-8.125,11.99-8.125c7.223,0,12.425,6.179,13.079,13.543
+                <img class="u-image u-image-contain u-image-round u-preserve-proportions u-radius-10 u-image-1" src="/static/images/54335e5c4d98fafafb5a6e4cd7297058e85bbef5d328b4f8e62ab31a7c3e40aab42b5d2049e5f48791830697f9f42d33255a479722854252a05e61_1280.png" alt="" data-image-width="1063" data-image-height="1280"><span class="u-icon u-icon-1"><svg class="u-svg-content" viewBox="0 0 50 50" x="0px" y="0px" style="width: 1em; height: 1em;"><path style="fill:currentColor;" d="M24.85,10.126c2.018-4.783,6.628-8.125,11.99-8.125c7.223,0,12.425,6.179,13.079,13.543
 	c0,0,0.353,1.828-0.424,5.119c-1.058,4.482-3.545,8.464-6.898,11.503L24.85,48L7.402,32.165c-3.353-3.038-5.84-7.021-6.898-11.503
 	c-0.777-3.291-0.424-5.119-0.424-5.119C0.734,8.179,5.936,2,13.159,2C18.522,2,22.832,5.343,24.85,10.126z"></path></svg><img></span>
               </div>
@@ -72,7 +72,7 @@
             <div class="u-container-style u-list-item u-radius-15 u-repeater-item u-shape-round u-video-cover u-white u-list-item-2">
               <div class="u-container-layout u-similar-container u-valign-top-xl u-container-layout-2">
                 <h4 class="u-align-center u-text u-text-palette-1-dark-2 u-text-2">socks</h4>
-                <img class="u-image u-image-contain u-image-round u-preserve-proportions u-radius-10 u-image-2" src="images/60b7efdc02f3715683f669f90e029cb0635561ed08210fa8f7e7968d9294196b39735cd62d989c56bb75ee91673dddc7781df0003340bb8b769559_1280.png" alt="" data-image-width="1141" data-image-height="1280"><span class="u-icon u-icon-2"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 51.997 51.997" style="width: 1em; height: 1em;"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-1559"></use></svg><svg class="u-svg-content" viewBox="0 0 51.997 51.997" x="0px" y="0px" id="svg-1559" style="enable-background:new 0 0 51.997 51.997;"><g><path d="M51.911,16.242C51.152,7.888,45.239,1.827,37.839,1.827c-4.93,0-9.444,2.653-11.984,6.905
+                <img class="u-image u-image-contain u-image-round u-preserve-proportions u-radius-10 u-image-2" src="/static/images/60b7efdc02f3715683f669f90e029cb0635561ed08210fa8f7e7968d9294196b39735cd62d989c56bb75ee91673dddc7781df0003340bb8b769559_1280.png" alt="" data-image-width="1141" data-image-height="1280"><span class="u-icon u-icon-2"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 51.997 51.997" style="width: 1em; height: 1em;"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-1559"></use></svg><svg class="u-svg-content" viewBox="0 0 51.997 51.997" x="0px" y="0px" id="svg-1559" style="enable-background:new 0 0 51.997 51.997;"><g><path d="M51.911,16.242C51.152,7.888,45.239,1.827,37.839,1.827c-4.93,0-9.444,2.653-11.984,6.905
 		c-2.517-4.307-6.846-6.906-11.697-6.906c-7.399,0-13.313,6.061-14.071,14.415c-0.06,0.369-0.306,2.311,0.442,5.478
 		c1.078,4.568,3.568,8.723,7.199,12.013l18.115,16.439l18.426-16.438c3.631-3.291,6.121-7.445,7.199-12.014
 		C52.216,18.553,51.97,16.611,51.911,16.242z M49.521,21.261c-0.984,4.172-3.265,7.973-6.59,10.985L25.855,47.481L9.072,32.25
@@ -86,7 +86,7 @@
               <div class="u-container-layout u-similar-container u-valign-top-xl u-container-layout-3">
                 <h4 class="u-align-center u-text u-text-palette-1-dark-2 u-text-3">shoes<br>
                 </h4>
-                <img class="u-image u-image-contain u-image-round u-preserve-proportions u-radius-10 u-image-3" src="images/89e0653d24737a28a8c2cfdea936ea0b7da4f94f6edb616162bfa8256d61d209cd803624ce1783924ea2604414cfdc899db59f1fcdffe03a27f30b_1280.jpg" alt="" data-image-width="1067" data-image-height="1280"><span class="u-icon u-icon-3"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 51.997 51.997" style="width: 1em; height: 1em;"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-7887"></use></svg><svg class="u-svg-content" viewBox="0 0 51.997 51.997" x="0px" y="0px" id="svg-7887" style="enable-background:new 0 0 51.997 51.997;"><g><path d="M51.911,16.242C51.152,7.888,45.239,1.827,37.839,1.827c-4.93,0-9.444,2.653-11.984,6.905
+                <img class="u-image u-image-contain u-image-round u-preserve-proportions u-radius-10 u-image-3" src="/static/images/89e0653d24737a28a8c2cfdea936ea0b7da4f94f6edb616162bfa8256d61d209cd803624ce1783924ea2604414cfdc899db59f1fcdffe03a27f30b_1280.jpg" alt="" data-image-width="1067" data-image-height="1280"><span class="u-icon u-icon-3"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 51.997 51.997" style="width: 1em; height: 1em;"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-7887"></use></svg><svg class="u-svg-content" viewBox="0 0 51.997 51.997" x="0px" y="0px" id="svg-7887" style="enable-background:new 0 0 51.997 51.997;"><g><path d="M51.911,16.242C51.152,7.888,45.239,1.827,37.839,1.827c-4.93,0-9.444,2.653-11.984,6.905
 		c-2.517-4.307-6.846-6.906-11.697-6.906c-7.399,0-13.313,6.061-14.071,14.415c-0.06,0.369-0.306,2.311,0.442,5.478
 		c1.078,4.568,3.568,8.723,7.199,12.013l18.115,16.439l18.426-16.438c3.631-3.291,6.121-7.445,7.199-12.014
 		C52.216,18.553,51.97,16.611,51.911,16.242z M49.521,21.261c-0.984,4.172-3.265,7.973-6.59,10.985L25.855,47.481L9.072,32.25
@@ -106,7 +106,7 @@
             <div class="u-container-style u-list-item u-radius-15 u-repeater-item u-shape-round u-video-cover u-white u-list-item-4">
               <div class="u-container-layout u-similar-container u-valign-bottom-lg u-valign-bottom-md u-valign-bottom-sm u-valign-bottom-xs u-valign-top-xl u-container-layout-4">
                 <h4 class="u-align-center u-text u-text-palette-1-dark-2 u-text-6">laptop</h4>
-                <img class="u-image u-image-contain u-image-round u-preserve-proportions u-radius-10 u-image-4" src="images/eb1f1f8ac884f3b1197ee9006e73151997f43357cfb12388fa1c781cb9b2cf8f88e6e6df6dc48f89debe2469606692badf543bc24292f1d3818784_1280.png" alt="" data-image-width="150" data-image-height="106">
+                <img class="u-image u-image-contain u-image-round u-preserve-proportions u-radius-10 u-image-4" src="/staticimages/eb1f1f8ac884f3b1197ee9006e73151997f43357cfb12388fa1c781cb9b2cf8f88e6e6df6dc48f89debe2469606692badf543bc24292f1d3818784_1280.png" alt="" data-image-width="150" data-image-height="106">
                 <a href="https://nicepage.com/c/testimonials-html-templates" class="u-border-none u-btn u-button-style u-none u-btn-2"><span class="u-icon u-icon-4"><svg class="u-svg-content" viewBox="0 0 50 50" x="0px" y="0px" style="width: 1em; height: 1em;"><path style="fill:currentColor;" d="M24.85,10.126c2.018-4.783,6.628-8.125,11.99-8.125c7.223,0,12.425,6.179,13.079,13.543
 	c0,0,0.353,1.828-0.424,5.119c-1.058,4.482-3.545,8.464-6.898,11.503L24.85,48L7.402,32.165c-3.353-3.038-5.84-7.021-6.898-11.503
 	c-0.777-3.291-0.424-5.119-0.424-5.119C0.734,8.179,5.936,2,13.159,2C18.522,2,22.832,5.343,24.85,10.126z"></path></svg><img></span>
@@ -116,7 +116,7 @@
             <div class="u-container-style u-list-item u-radius-15 u-repeater-item u-shape-round u-video-cover u-white u-list-item-5">
               <div class="u-container-layout u-similar-container u-valign-bottom-lg u-valign-bottom-md u-valign-bottom-sm u-valign-bottom-xs u-valign-top-xl u-container-layout-5">
                 <h4 class="u-align-center u-text u-text-palette-1-dark-2 u-text-7">tablet</h4>
-                <img class="u-image u-image-contain u-image-round u-preserve-proportions u-radius-10 u-image-5" src="images/63993314f4c7eef25b09bdde7978a459adfa2f886a5cb33cb876cb3cf081d847dd35306e2d2178ede588e3df61c12330fa1d9069ae30dd44ca34c0_1280.png" alt="" data-image-width="1102" data-image-height="1280">
+                <img class="u-image u-image-contain u-image-round u-preserve-proportions u-radius-10 u-image-5" src="/static/images/63993314f4c7eef25b09bdde7978a459adfa2f886a5cb33cb876cb3cf081d847dd35306e2d2178ede588e3df61c12330fa1d9069ae30dd44ca34c0_1280.png" alt="" data-image-width="1102" data-image-height="1280">
                 <a href="https://nicepage.com/c/testimonials-html-templates" class="u-border-none u-btn u-button-style u-none u-btn-3"><span class="u-icon u-icon-5"><svg class="u-svg-content" viewBox="0 0 51.997 51.997" x="0px" y="0px" style="width: 1em; height: 1em;"><g><path d="M51.911,16.242C51.152,7.888,45.239,1.827,37.839,1.827c-4.93,0-9.444,2.653-11.984,6.905
 		c-2.517-4.307-6.846-6.906-11.697-6.906c-7.399,0-13.313,6.061-14.071,14.415c-0.06,0.369-0.306,2.311,0.442,5.478
 		c1.078,4.568,3.568,8.723,7.199,12.013l18.115,16.439l18.426-16.438c3.631-3.291,6.121-7.445,7.199-12.014
@@ -151,19 +151,19 @@
           <div class="u-layout">
             <div class="u-layout-row">
               <div class="u-container-style u-layout-cell u-size-15-lg u-size-15-sm u-size-15-xl u-size-15-xs u-size-30-md u-layout-cell-1">
-                <div class="u-container-layout u-container-layout-1"><span class="u-file-icon u-icon u-icon-1"><img src="images/3144456.png" alt=""></span>
+                <div class="u-container-layout u-container-layout-1"><span class="u-file-icon u-icon u-icon-1"><img src="/static/images/3144456.png" alt=""></span>
                 </div>
               </div>
               <div class="u-container-style u-layout-cell u-size-15-lg u-size-15-sm u-size-15-xl u-size-15-xs u-size-30-md u-layout-cell-2">
-                <div class="u-container-layout u-container-layout-2"><span class="u-file-icon u-icon u-icon-2"><img src="images/991922.png" alt=""></span>
+                <div class="u-container-layout u-container-layout-2"><span class="u-file-icon u-icon u-icon-2"><img src="/static/images/991922.png" alt=""></span>
                 </div>
               </div>
               <div class="u-container-style u-layout-cell u-size-15-lg u-size-15-sm u-size-15-xl u-size-15-xs u-size-30-md u-layout-cell-3">
-                <div class="u-container-layout u-container-layout-3"><span class="u-file-icon u-icon u-icon-3"><img src="images/839888.png" alt=""></span>
+                <div class="u-container-layout u-container-layout-3"><span class="u-file-icon u-icon u-icon-3"><img src="/static/images/839888.png" alt=""></span>
                 </div>
               </div>
               <div class="u-container-style u-layout-cell u-size-15-lg u-size-15-sm u-size-15-xl u-size-15-xs u-size-30-md u-layout-cell-4">
-                <div class="u-container-layout u-container-layout-4"><span class="u-file-icon u-icon u-icon-4"><img src="images/2704794.png" alt=""></span>
+                <div class="u-container-layout u-container-layout-4"><span class="u-file-icon u-icon u-icon-4"><img src="/static/images/2704794.png" alt=""></span>
                 </div>
               </div>
             </div>
