removed all unnecessary links

--- a/server/src/templates/refugee_events/refugee_events.html
+++ b/server/src/templates/refugee_events/refugee_events.html
@@ -72,7 +72,7 @@
                 <p class="u-text u-text-custom-color-1 u-text-default-xs u-text-4">
                   <span style="font-size: 0.875rem;">more info</span> ... 
                 </p>
-                <a href="https://nicepage.com/k/projects-website-templates" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-1">attend</a>
+                <a href="#" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-1">attend</a>
               </div>
             </div><!--/blog_post--><!--blog_post-->
             <div class="u-align-left u-blog-post u-container-style u-radius-15 u-repeater-item u-shape-round u-video-cover u-white u-repeater-item-2">
@@ -83,7 +83,7 @@
                 <h4 class="u-text u-text-black u-text-default-xs u-text-5">füssen tour</h4>
                 <p class="u-text u-text-default-xs u-text-6">4 Dec | 12 attending</p>
                 <p class="u-text u-text-custom-color-1 u-text-default-xs u-text-7">more info...</p>
-                <a href="https://nicepage.com/k/projects-website-templates" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-2">attend</a>
+                <a href="#" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-2">attend</a>
               </div>
             </div><!--/blog_post--><!--blog_post-->
             <div class="u-align-left u-blog-post u-container-style u-radius-15 u-repeater-item u-shape-round u-video-cover u-white u-repeater-item-3">
@@ -94,7 +94,7 @@
                 <h4 class="u-text u-text-black u-text-default-xs u-text-8">munich tour</h4>
                 <p class="u-text u-text-default-xs u-text-9">8 Dec | 27 registered participants</p>
                 <p class="u-text u-text-custom-color-1 u-text-default-xs u-text-10">more info....</p>
-                <a href="https://nicepage.com/k/projects-website-templates" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-3">attend</a>
+                <a href="#" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-3">attend</a>
               </div>
             </div><!--/blog_post-->
           </div>
