switch to new register

--- a/server/src/templates/auth/Log-In.html
+++ b/server/src/templates/auth/Log-In.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta name="keywords" content="">
     <meta name="description" content="">
-    <title>Register</title>
+    <title>Log In</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
-<link rel="stylesheet" href="static/register.css" media="screen">
+<link rel="stylesheet" href="Log-In.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="nicepage.js" defer=""></script>
     <meta name="generator" content="Nicepage 4.21.12, nicepage.com">
@@ -21,7 +21,7 @@
 		"logo": "images/WhatsAppImage2022-11-19at17.33.381.jpeg"
 }</script>
     <meta name="theme-color" content="#478ac9">
-    <meta property="og:title" content="Register">
+    <meta property="og:title" content="Log In">
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
   </head>
@@ -63,46 +63,23 @@
       </div></header> 
     <section class="u-align-center u-clearfix u-custom-color-2 u-section-1" id="carousel_8844">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h2 class="u-text u-text-default u-text-1" data-lang-en="​Pet &amp;amp; Animal Care Courses">Registration</h2>
+        <h2 class="u-text u-text-default u-text-1" data-lang-en="​Pet &amp;amp; Animal Care Courses">Log In</h2>
         <div class="u-form u-form-1">
-          <form class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" style="padding: 10px;" method="post">
+          <form action="https://forms.nicepagesrv.com/Form/Process" class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" source="email" name="form" style="padding: 10px;">
             <div class="u-form-group u-form-name">
-              <label for="username" class="u-label">Username</label>
-              <input type="text" placeholder="Enter your username" id="username" name="username" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white" required="required">
+              <label for="name-807e" class="u-label">Username</label>
+              <input type="text" placeholder="Enter your username" id="name-807e" name="username" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white" required="">
             </div>
             <div class="u-form-group">
-              <label for="firstname" class="u-label">First name</label>
-              <input type="text" placeholder="Enter your first name" id="firstname" name="firstname" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white" required="required">
-            </div>
-            <div class="u-form-group u-form-group-3">
-              <label for="lastname" class="u-label">Last name</label>
-              <input type="text" placeholder="Enter your last name" id="lastname" name="lastname" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white" required="required">
-            </div>
-            <div class="u-form-checkbox-group u-form-group u-form-group-4">
-              <label class="u-label">Do you have refugee status?</label>
-              <div class="u-form-checkbox-group-wrapper">
-                <div class="u-input-row">
-                  <input id="field-4d7b" type="checkbox" value="yes" name="is_refugee">
-                  <label class="u-label" for="field-4d7b">Yes</label>
-                </div>
-                <div class="u-input-row">
-                  <input id="field-7735" type="checkbox" value="no" name="is_refugee">
-                  <label class="u-label" for="field-7735">No</label>
-                </div>
-              </div>
-            </div>
-            <div class="u-form-group u-form-group-5">
-              <label for="text-faf8" class="u-label">Password</label>
-              <input type="password" placeholder="Enter a password" id="password" name="password" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white" required="required">
-            </div>
-            <div class="u-form-group u-form-group-6">
-              <label for="text-acd7" class="u-label">Refugee ID</label>
-              <input type="text" placeholder="Enter your refugee ID (if it applies)" id="text-acd7" name="ref-idee" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white">
+              <label for="email-807e" class="u-label">Password</label>
+              <input type="text" placeholder="Enter your password" id="email-807e" name="password" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white" required="required">
             </div>
             <div class="u-align-left u-form-group u-form-submit">
-              <a class="u-btn u-btn-submit u-button-style">submit</a>
+              <a href="https://google.com" class="u-btn u-btn-submit u-button-style" target="_blank">submit</a>
               <input type="submit" value="submit" class="u-form-control-hidden">
             </div>
+            <div class="u-form-send-message u-form-send-success"> Vielen Dank! Ihre Nachricht wurde gesendet. </div>
+            <div class="u-form-send-error u-form-send-message"> Ihre Nachricht konnte nicht gesendet werden. Bitte beheben Sie den Fehler und versuchen Sie es erneut. </div>
             <input type="hidden" value="" name="recaptchaResponse">
             <input type="hidden" name="formServices" value="e8dedf433b2f9e8469cbbd3b973f0790">
           </form>
