--- a/server/src/templates/auth/register.html
+++ b/server/src/templates/auth/register.html
@@ -18,7 +18,7 @@
 		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": "IntegrApp",
-		"logo": "images/WhatsAppImage2022-11-19at17.33.381.jpeg"
+		"logo": "/staticimages/WhatsAppImage2022-11-19at17.33.381.jpeg"
 }</script>
     <meta name="theme-color" content="#478ac9">
     <meta property="og:title" content="Register">
@@ -26,8 +26,8 @@
     <meta property="og:type" content="website">
   </head>
   <body class="u-body u-xl-mode" data-lang="de"><header class="u-clearfix u-header u-header" id="sec-b153"><div class="u-clearfix u-sheet u-valign-top-xs u-sheet-1">
-        <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="500" data-image-height="500">
-          <img src="images/WhatsAppImage2022-11-19at17.33.381.jpeg" class="u-logo-image u-logo-image-1">
+        <a href="/" class="u-image u-logo u-image-1" data-image-width="500" data-image-height="500">
+          <img src="/static/images/WhatsAppImage2022-11-19at17.33.381.jpeg" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-menu u-menu-hamburger u-offcanvas u-menu-1" data-responsive-from="XL">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px; font-weight: 700;">
@@ -111,17 +111,5 @@
     </section>
     
     
-    <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-7c13"><div class="u-clearfix u-sheet u-sheet-1"></div></footer>
-    <section class="u-backlink u-clearfix u-grey-80">
-      <a class="u-link" href="https://nicepage.com/website-design" target="_blank">
-        <span>Website Design</span>
-      </a>
-      <p class="u-text">
-        <span>created with</span>
-      </p>
-      <a class="u-link" href="https://nicepage.com/html-website-builder" target="_blank">
-        <span>HTML Creator</span>
-      </a>. 
-    </section>
   
 </body></html>
