made buttons radio

--- a/server/src/templates/auth/register.html
+++ b/server/src/templates/auth/register.html
@@ -82,11 +82,11 @@
               <label class="u-label">Do you have refugee status?</label>
               <div class="u-form-checkbox-group-wrapper">
                 <div class="u-input-row">
-                  <input id="field-4d7b" type="checkbox" value="yes" name="is_refugee">
+                  <input type="radio" name="is_refugee" id="option1" value="yes"></input>
                   <label class="u-label" for="field-4d7b">Yes</label>
                 </div>
                 <div class="u-input-row">
-                  <input id="field-7735" type="checkbox" value="no" name="is_refugee">
+                  <input type="radio" name="is_refugee" id="option2" value="no"></input>
                   <label class="u-label" for="field-7735">No</label>
                 </div>
               </div>
